--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,12 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
+repositories {
+    maven {
+        // location of the maven that hosts JEI files
+        url "http://dvs1.progwml6.com/files/maven"
+    }
+}
 /*
 // for people who want stable - not yet functional for MC 1.8.8 - we require the forgegradle 2.1 snapshot
 plugins {
@@ -25,7 +31,7 @@ group= "com.logicmaster63.mechanical_expansion" // http://maven.apache.org/guide
 archivesBaseName = "me"
 
 minecraft {
-    version = "1.8.9-11.15.1.1722"
+    version = "1.8.9-11.15.1.1902-1.8.9"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -59,7 +65,12 @@ dependencies {
     // for more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
-
+    // compile against the JEI API
+    //mcversion = "1.8.9"
+    //jei_version = "2.28.9.177"
+    deobfCompile "mezz.jei:jei_1.8.9:2.28.9.177:sources"
+    // at runtime, use the full JEI jar
+    runtime "mezz.jei:jei_1.8.9:2.28.9.177"
 }
 
 processResources
